[gd_scene load_steps=4 format=2]

[ext_resource path="res://asset/prstart.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Player/BSOD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 95
font_data = ExtResource( 1 )

[node name="BSOD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0 )

[node name="YouDied" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "You Died you dumbass"
align = 1

[node name="vbc" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -22.0
margin_right = 960.0
margin_bottom = 22.0

[node name="Restart" type="Button" parent="vbc"]
margin_right = 960.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="vbc/Restart"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Main_Menu" type="Button" parent="vbc"]
margin_top = 24.0
margin_right = 1920.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="vbc/Main_Menu"]
margin_right = 40.0
margin_bottom = 14.0

[connection signal="pressed" from="vbc/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="vbc/Main_Menu" to="." method="_on_Main_Menu_pressed"]
